Spring behaves correctly after all

--- a/_posts/2017-02-09-jcache.md
+++ b/_posts/2017-02-09-jcache.md
@@ -7,6 +7,12 @@ tags:
 - What I learned today
 ---
 
+**UPDATE (2017-02-15):** Spring is correctly handling the `null` from `getMissingCache`. So you won't have to overload it. I was misled
+by a framework that was incorrectly layering the `JCacheCacheManager`. I stand corrected and the article as well. Thanks to 
+[Stéphane Nicoll](https://twitter.com/snicoll) for his vigilance.
+
+***
+
 I played a lot with JCache connectors lately. To plug [Ehcache 3](http://www.ehcache.org/) to different things. 
 
 I noticed one really dangerous thing. Frameworks tend to spontaneously create caches that were not explicitly defined. I 
@@ -19,26 +25,24 @@ Let's look at two examples
 Caching in Spring is implemented by `spring-cache`. To plug JCache to `spring-cache` you use the `JCacheCacheManager`. By default 
 when a cache isn't available in the `CacheManager`, Spring calls `JCacheCacheManager.getMissingCache`. So far so good.
 
-The problem is that the default implementation for this method return `null`. It basically means: "Please don't cache 
-anything even if I've explicitly set an annotation saying I want to cache this thing."
+The default implementation for this method returns `null` when a cache doesn't exist. This `null` will then be handled at 
+higher levels to throw a nice exception.
 
-This is dangerous because you end up having no cache at all without really noticing.
+If you want to explicitly support spontaneous cache creation, `getMissingCache` is where you should put your creation code. 
 
-So I recommend overloading `getMissingCache` to throw an explicit exception when the cache isn't found.
+However, watch out if you do that. You might lost track of all the existing caches. And please, never do the following.
 
 ```java
 @Override
-protected org.springframework.cache.Cache getMissingCache(String name) {
-    org.springframework.cache.Cache cache = super.getMissingCache(name);
-    // All caches should be configured. Throw an exception when one is not found
+protected Cache getMissingCache(String name) {
+    Cache cache = super.getMissingCache(name);
     if(cache == null) {
-        throw new IllegalArgumentException("Unknown cache: " + name);
+        return new JCacheCache(cacheManager.createCache(name, new MutableConfiguration<>()));
     }
     return cache;
 }
 ```
-The alternative would be to create a correctly configured cache in `getMissingCache`. That also work. I'm not doing that 
-right now because I prefer to centralize my cache creations in `CacheConfiguration`.
+It returns a cache configured using default. It is never what you want.
 
 # Hibernate
 
