--- a/_posts/2017-02-09-jcache.md
+++ b/_posts/2017-02-09-jcache.md
@@ -11,6 +11,9 @@ tags:
 by a framework that was incorrectly layering the `JCacheCacheManager`. I stand corrected and the article as well. Thanks to 
 [Stéphane Nicoll](https://twitter.com/snicoll) for his vigilance.
 
+**UPDATE (2017-02-16):** Spring has a `JCacheCacheConfiguration` that configure a JCache `CacheManager` using a list of cache names and a 
+default cache configuration. By default, it uses `new MutableConfiguration<>()` so the article was updated accordingly.
+
 ***
 
 I played a lot with JCache connectors lately. To plug [Ehcache 3](http://www.ehcache.org/) to different things. 
@@ -30,7 +33,7 @@ higher levels to throw a nice exception.
 
 If you want to explicitly support spontaneous cache creation, `getMissingCache` is where you should put your creation code. 
 
-However, watch out if you do that. You might lost track of all the existing caches. And please, never do the following.
+However, watch out if you do that. You might lost track of all the existing caches. And please, **never** do the following.
 
 ```java
 @Override
@@ -44,6 +47,31 @@ protected Cache getMissingCache(String name) {
 ```
 It returns a cache configured using default. It is never what you want.
 
+Then, as usual, Spring tries to be nice with us. So if you enable caching (`@EnableCaching`), that the JSR-107 API is in  
+the classpath and that you do not expose any `CacheManager`, Spring will create one for you.
+
+The `JCacheCacheConfiguration` will get a default JSR-107 `CacheManager` and add a list of caches taken from the cache property 
+`spring.cache.cache-names`. These caches are by default created using a `new MutableConfiguration<>()`. As we said above, this 
+is not a correctly configured cache.
+
+The solution is to expose the wanted cache configuration in a bean.
+
+```java
+@Bean
+public javax.cache.configuration.Configuration<Object, Object> cacheConfiguration() {
+    CacheConfiguration<Object, Object> cacheConfiguration = CacheConfigurationBuilder
+        .newCacheConfigurationBuilder(Object.class, Object.class, ResourcePoolsBuilder
+            .newResourcePoolsBuilder().heap(100))
+        .build();
+    javax.cache.configuration.Configuration<Object, Object> configuration =
+        Eh107Configuration.fromEhcacheCacheConfiguration(cacheConfiguration);
+    return configuration;
+}
+```
+
+This bean will be magically used as cache default. You should always do this and never let ``new MutableConfiguration<>()` 
+be used.
+ 
 # Hibernate
 
 To use JCache with Hibernate we need to use the `JCacheRegionFactory`. The problem with `JCacheRegionFactory` is that by 
