Update article with new hibernate version

--- a/_posts/2017-02-09-jcache.md
+++ b/_posts/2017-02-09-jcache.md
@@ -14,6 +14,9 @@ by a framework that was incorrectly layering the `JCacheCacheManager`. I stand c
 **UPDATE (2017-02-16):** Spring has a `JCacheCacheConfiguration` that configure a JCache `CacheManager` using a list of cache names and a 
 default cache configuration. By default, it uses `new MutableConfiguration<>()` so the article was updated accordingly.
 
+**UPDATE (2017-04-07):** My [Hibernate PR](https://github.com/hibernate/hibernate-orm/pull/1783) has been accepted. So you now have an elegant 
+solution with the latest Hibernate versions. The article was updated accordingly.
+
 ***
 
 I played a lot with JCache connectors lately. To plug [Ehcache 3](http://www.ehcache.org/) to different things. 
@@ -81,8 +84,19 @@ Ehcache).
 
 This is really bad because it is pretty hard to detect.
 
-What I recommend in this case is, again, to override the default. Sadly, there is no straightforward cache creation method to 
-override. The best we have is `newDefaultConfig` which provides the default configuration.
+What I recommend in this case is, again, to override the default. In the latest Hibernate versions (5.2.8+) (thanks to 
+https://github.com/hibernate/hibernate-orm/pull/1783[HHH-1783], we can do the following
+
+```java
+@Override
+protected Cache<Object, Object> createCache(String regionName, Properties properties, CacheDataDescription metadata) {
+    throw new IllegalArgumentException("Unknown hibernate cache: " + regionName);
+}
+```
+
+In older versions, sadly, there is no straightforward cache creation method to override. The best we have is 
+`newDefaultConfig` which provides the default configuration. One sad thing is that you don't have the actual cache name 
+here. You will need to debug to know it.
 
 ```java
 @Override
@@ -90,11 +104,8 @@ protected Configuration<Object, Object> newDefaultConfig(Properties properties, 
     throw new IllegalArgumentException("Unknown hibernate cache: " + metadata);
 }
 ```
-One sad thing is that you don't have the actual cache name here. You will need to debug to know it. I filed an
-[improvement](https://hibernate.atlassian.net/browse/HHH-11471) (and the related [pull request](https://github.com/hibernate/hibernate-orm/pull/1783)) 
-to fix that. It was merged today so should be available soon.
 
-Again, an alternative solution would be to provide a meaningful cache configuration in this method.
+Again, an alternative solution would be to provide a meaningful default cache configuration in this method.
 
 # Conclusion
 
