Mac Cmd+ù trick

--- a/_posts/2017-06-02-mac-ui.md
+++ b/_posts/2017-06-02-mac-ui.md
@@ -45,7 +45,7 @@ Then, macOS is lacking Windows docking. So I've installed [BetterTouchTool](http
 
 Back to complaining. Here are the things I wasn't able to fix so far.
 
-* `Cmd+Tab` should bring to front the requested window. Always. It doesn't matter is the window is minimized, in background or whatever. Just bring it in front
+* `Cmd+Tab` should bring to front the requested window. Always. It doesn't matter if the window is minimized, in background or whatever. Just bring it in front
 * `Cmd+Tab` should bring the last used window of an application to the front. Not my 6 Chrome windows. Only the latest one
 * `Cmd+ù` should behave as ``Cmd+` ``  when using a ca-fr keyboard. I can probably use the remap trick for that. I tried BTT, it doesn't work
 * When switching desktop, it shouldn't matter where my mouse is. Especially to access the dashboard. It should just switch all screens. It there a shortcut to switch screen 1?
