--- a/_posts/2018-08-29-jcrete.md
+++ b/_posts/2018-08-29-jcrete.md
@@ -30,7 +30,7 @@ Is it the Java community that is awesome? Probably all of the above sincerely.
 Then, if you have never heard of JCrete let me explain a bit more what it is about.
 
 First, it's an unconference with a limited number of participants. Those participants are selected for their accomplishments.
-It means that you are well-known in the Java community for something. Of course, a lot of [Java Champions](https://community.oracle.com/community/technology_network_community/java/java-champions) are
+It means that you are well-known in the Java community for something. Of course, a lot of [Java Champions](https://github.com/aalmiray/java-champions) are
 attending. To prevent too much inbreeding, a little amount of entropy coming from random senior lead developers is added. 
 However, the rule is that anyone attending should be able to propose a subject and talk about it. You can see it as a conference
 with only speakers talking to one another.
