--- a/_posts/2021-06-03-books.md
+++ b/_posts/2021-06-03-books.md
@@ -19,26 +19,26 @@ In random order.
 
 ## Technical
 
-* Refactoring
-* Working Effectively with Legacy Code 
-* Head First Design Patterns
-* Effective Java
-* Java Concurrency in Practice
-* JUnit in Action
-* Core Java
-* Test-Driven Development
-* Modern JavaScript for the impatient
+* Refactoring - Martin Fowler
+* Working Effectively with Legacy Code - Michael Feathers
+* Head First Design Patterns - Eric Freeman, Elisabeth Robson, Bert Bates, Kathy Sierra
+* Effective Java - Joshua Bloch
+* Java Concurrency in Practice - Brian Goetz
+* JUnit in Action - Vincent Massol, Ted Husted (I haven't read the third edition written by someone else)
+* Core Java - Cay Horstmann
+* Test-Driven Development by Example - Kent Beck
+* Modern JavaScript for the impatient - Cay Horstmann 
 
 ## Methodology
 
-* Continuous delivery
-* The Goal
-* Accelerate
-* The Phoenix project
-* Code Complete
-* Rapid Development
-* Clean Code (but don’t believe everything he says)
-* Mythical Man-Month
+* Continuous delivery - Jez Humble, David Farley
+* The Goal - Eliyahu M Goldratt, Jeff Cox
+* Accelerate - Nicole Forsgren, Jez Humble, Gene Kim
+* The Phoenix project - Gene Kim, Kevin Behr, George Spafford
+* Code Complete - Steve McConnell
+* Rapid Development - Steve McConnell
+* Clean Code (but don’t believe everything he says) - Robert Martin
+* Mythical Man-Month - Frederick Brooks
 
 The list is quite incomplete. 
 I will add tons of books that worth your attention, but that's a good start. 
