Add some personal growth, world and finance books

--- a/_posts/2021-06-03-books.md
+++ b/_posts/2021-06-03-books.md
@@ -40,6 +40,24 @@ In random order.
 * Clean Code (but don’t believe everything he says) - Robert Martin
 * Mythical Man-Month - Frederick Brooks
 
+## Personal growth
+
+* The Algebra of Happiness - Scott Galloway
+* Start with Why - Simon Sinek
+* Getting things done - David Allen
+
+## Market Finance
+
+* Flash boys - Michael Lewis
+* Options, Futures, and Other Derivatives - John C. Hull
+* Rogue Trader - Nick Leeson
+
+## Understand the world
+
+* Guns, Germs, and Steel - Jared Diamond
+* Collapse - Jared Diamond
+* 1491 - Charles C. Mann
+
 The list is quite incomplete. 
 I will add tons of books that worth your attention, but that's a good start. 
 If you think watching videos and reading blog posts is enough, sorry you are wrong.
