Talk about AltTab

--- a/_posts/2017-06-02-mac-ui.md
+++ b/_posts/2017-06-02-mac-ui.md
@@ -12,10 +12,10 @@ I've [mentioned already]({% post_url 2014-09-14-having-mac %}) why I am now usin
 But I'm still complaining about the really bad UI behavior of macOS (I'm on Sierra). And the ca_fr keyboard that should have had the exact
 same layout that Windows had for years instead of trying to be wiser... But that's hardware so there's nothing I can do about it.
 
-During my [last round of complains](https://twitter.com/henri_tremblay/status/869992607689998337) I was ask to write an article about it. So
-here it is.
+During my [last round of complains](https://twitter.com/henri_tremblay/status/869992607689998337) I was asked to write an article about it. 
+So here it is.
 
-First, one of the first thing I've fixed is the random behavior of _Home_ and _End_ keys. By default, depending on the app you are in, the behave
+First, one of the first things I've fixed is the random behavior of _Home_ and _End_ keys. By default, depending on the app you are in, the behave
 differently. This is plainly insane. Here is the fix:
 
 ```sh
