--- a/_posts/2024-05-29-alt-tab.md
+++ b/_posts/2024-05-29-alt-tab.md
@@ -14,10 +14,10 @@ The pending concerns:
 * `Cmd+Tab` should bring the last used window of an application to the front. Not my 6 Chrome windows. Only the latest one
 * `Cmd+ù` should behave as ``Cmd+` ``  when using a ca-fr keyboard. I can probably use the remap trick for that. I tried BTT, it doesn't work
 * `Cmd+X` should cut everywhere. `Cmd+C` and then `Cmd+Alt+V` is just not the way my brain works. I think about copy or cut when seeing the file. Not when pasting it. Am I the only one?
-* I use 2 keyboard layouts (US-en and CA-fr). Because Macs can't have a Canadian French keyboard. Only Canadian multilanguage with unreacheable curly-braces. MacOS should remember which application is using which keyboard. However, I don't need it for each Chrome tab
+* I use 2 keyboard layouts (US-en and CA-fr). Because Macs can't have a Canadian French keyboard. Only Canadian multilanguage with unreachable curly-braces. MacOS should remember which application is using which keyboard. However, I don't need it for each Chrome tab
 
 A couple of months ago, the `Cmd+Tab` issue finally got solved using a third-party open-source software named [AltTab](https://github.com/lwouis/alt-tab-macos).
-It finally allow to switch between specific windows and not full application.
+It finally allows to switch between specific windows and not full application.
 It also remembers nicely that last window that had the focus.
 
 One problem down.
