Move good books

--- a/_posts/2021-06-03-books.md
+++ b/_posts/2021-06-03-books.md
@@ -39,12 +39,14 @@ In random order.
 * Rapid Development - Steve McConnell
 * Clean Code (but don’t believe everything he says) - Robert Martin
 * Mythical Man-Month - Frederick Brooks
+* Tribes - Seth Godin
 
 ## Personal growth
 
 * The Algebra of Happiness - Scott Galloway
 * Start with Why - Simon Sinek
 * Getting things done - David Allen
+* Anything You Want: 40 Lessons for a New Kind of Entrepreneur - Derek Sivers
 
 ## Market Finance
 
@@ -57,6 +59,19 @@ In random order.
 * Guns, Germs, and Steel - Jared Diamond
 * Collapse - Jared Diamond
 * 1491 - Charles C. Mann
+
+## Understand people
+
+* Influence – Robert B. Cialdini
+* Pre-Suasion - Robert B. Cialdini
+* The Undoing Project - Michael Lewis
+
+## Novels (because fiction also makes you think)
+
+* The Hitchhiker's guide to the galaxy - Douglas Adams
+* Dune (all volumes) - Frank Herbert
+* Robot series (all volumes) - Isaac Asimov
+* Foundation (all volumes) - Isaac Asimov
 
 The list is quite incomplete. 
 I will add tons of books that worth your attention, but that's a good start. 
